src/main/resources/Krakatau-master/tests/assembler/bad/badescapes6.j
.class public 'qqqqqqqqqqq\x32qqqqqqqqqqqq\u1111qqqqqq\U00100010qqqqqqqqqqqqqqqqqqq\n\b\t\rqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqq\000qqqq\8qqqqqq'
.super java/lang/Object
.end class